--- a/styles/Project.module.css
+++ b/styles/Project.module.css
@@ -82,7 +82,20 @@
 	}
 	.canvas {
 		height: calc((var(--grid-spacing-2) * 7) + (var(--grid-spacing-1) * 3));
-		/*transform: translateY(calc(var(--grid-spacing-3) * -1));*/
 	}
+
+}
+
+@media (max-width: 570px) {
+	.title {
+		font-size: 2.2rem;
+	}
+	.id  {
+		display: none;
+	}
+	.report h3 {
+		font-size: 1.6rem;
+	}
+
 }
 
