--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,9 +21,12 @@ a {
 :root {
   --paper: #d7d0cb;
   --paper-alt: #e8e4e0;
+
   --gray-1: #cbc9c6;
   --gray-2: #cec8c7;
   --gray-3: #c7c5c3;
   --gray-4: #777474;
   --gray-5: #2c2c2c;
+
+  --scale: 1px;
 }
